<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5BFBF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMainTitle"
        android:textColor="#000000"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/editTextGuess"
        android:layout_width="292dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/editTextGuess"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="84dp"
        android:text="@string/buttonSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGuess" />

    <Button
        android:id="@+id/buttonRank"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonRank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />

    <Button
        android:id="@+id/buttonTotals"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonTotals"
        app:layout_constraintStart_toEndOf="@+id/buttonRank"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="84dp"
        android:text="@string/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/editTextGuess" />

    <TextView
        android:id="@+id/textViewResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textViewResponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGuess" />

    <TextView
        android:id="@+id/textViewInvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/textViewInvalid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGuess" />

</androidx.constraintlayout.widget.ConstraintLayout>